# restsend-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.cn.md  README.md  SUMMARY.md  big-bang-plan.md  build.dart  build.gradle  build.rs  build_android.sh  build_ios.sh  build_ios_sim.sh  build_ios_sim_dylib.sh  build_macos.sh  package-lock.json  release_publish.sh
.github/workflows/: docker-image.yml
android-sdk/: settings.gradle
android-sdk/app/: build.gradle
android-sdk/gradle/: libs.versions.toml
android-sdk/gradle/wrapper/: gradle-wrapper.properties
bindings_kotlin/uniffi/client/: client.kt
bindings_python/: client.py
bindings_swift/: module.h  module.modulemap  restsend.swift
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/restsend/: Cargo.toml  bindgen.rs  uniffi.toml
crates/restsend-backend/: Cargo.toml
crates/restsend-backend/src/: lib.rs  main.rs  model.rs  openapi.rs
crates/restsend-backend/src/api/: access_log.rs  admin.rs  attachment.rs  auth.rs  auth_ctx.rs  chat.rs  error.rs  health.rs  helpdesk.rs  middleware_auth.rs  mod.rs  openapi.rs  push.rs  routes_ws.rs  tests.rs  topic.rs  user.rs
crates/restsend-backend/src/app/: config.rs  mod.rs  state.rs
crates/restsend-backend/src/entity/: attachment.rs  auth_token.rs  chat_log.rs  conversation.rs  helpdesk_inbox.rs  helpdesk_inbox_member.rs  mod.rs  presence_session.rs  relation.rs  topic.rs  topic_knock.rs  topic_member.rs  user.rs
crates/restsend-backend/src/infra/: db.rs  event.rs  metrics.rs  mod.rs  presence.rs  task_pool.rs  webhook.rs  websocket.rs
crates/restsend-backend/src/services/: auth.rs  auth_policy.rs  chat.rs  conversation.rs  error.rs  mod.rs  relation.rs  topic.rs  user.rs
crates/restsend-backend/static/: admin.html  chat.html  demo.html
crates/restsend-dart/: Cargo.toml
crates/restsend-dart/src/: api.rs  lib.rs
crates/restsend-ffi/: Cargo.toml  README.md  bindgen.rs  build.rs  build_local_dev.sh  uniffi.toml
crates/restsend-ffi/bindings/python/: restsend_ffi.py  restsend_sdk.py
crates/restsend-ffi/src/: account.rs  attachment.rs  callback_wrap.rs  conversation.rs  lib.rs  message.rs  topic.rs
crates/restsend-kotlin/: Cargo.toml
crates/restsend-macros/: Cargo.toml
crates/restsend-macros/src/: lib.rs
crates/restsend-npi/: Cargo.toml
crates/restsend-py/: Cargo.toml
crates/restsend-py/demo/: client_libs.py
crates/restsend-swift/: Cargo.toml  RestsendSdk.podspec
crates/restsend-wasm/: .gitignore  Cargo.toml  README.md  demo.html  filter.js  index.html  index.js  package.json  run.sh  vite.config.js
crates/restsend-wasm/assets/: tailwind-3.4.16.js
crates/restsend-wasm/pkg/: .gitignore  README.md  package.json  restsend_wasm.d.ts  restsend_wasm_bg.js  restsend_wasm_bg.wasm  restsend_wasm_bg.wasm.d.ts
crates/restsend-wasm/src/: account.rs  callback.rs  conversations.rs  js.rs  js_util.rs  lib.rs  logger.rs  message.rs  services.rs  topics.rs  users.rs
crates/restsend-wasm/src/tests/: conversations.rs  mod.rs
crates/restsend-wasm/test/: .gitignore  auth.spec.js  client.spec.js  client.test.js  common.js  connection.spec.js  conversations.spec.js  indexeddb.spec.js  message.spec.js  users.spec.js  worker.spec.js  worker_entry.js
crates/restsend-wasm/worker/: client.d.ts  client.mjs  entry.mjs
crates/restsend/src/: account.rs  callback.rs  error.rs  lib.rs  migrate.rs  net.rs  request.rs  utils.rs
crates/restsend/src/client/: attachment.rs  connection.rs  conversation.rs  media.rs  message.rs  mod.rs  services.rs  store.rs  topic.rs
crates/restsend/src/client.old/: connection.rs  services.rs
crates/restsend/src/client/store/: attachments.rs  conversations.rs  mod.rs  requests.rs  users.rs
crates/restsend/src/client/tests/: mod.rs  test_client.rs  test_conversation.rs  test_demo_dm.rs  test_local_e2e.rs  test_logs.rs  test_merge_conversation.rs  test_message_conversation.rs  test_reentrancy.rs  test_server.rs  test_sync_first_page.rs  test_upload.rs  test_users.rs
crates/restsend/src/client/tests/old/: mod.rs  test_chat.rs  test_clients.rs  test_websocket.rs
crates/restsend/src/error/: mod.rs  uniffi_wrap.rs  wasm_wrap.rs
crates/restsend/src/media/: mod.rs  reqwest_impl.rs  web_sys_impl.rs
crates/restsend/src/models/: chat_log.rs  config.rs  conversation.rs  mod.rs  topic.rs  topic_member.rs  user.rs
crates/restsend/src/services/: auth.rs  conversation.rs  media.rs  mod.rs  response.rs  tests.rs  topic.rs  topic_admin.rs  user.rs
crates/restsend/src/services/tests/: mod.rs  test_media.rs
crates/restsend/src/storage/: indexeddb.rs  memory.rs  memroy.rs  mod.rs  sqlite.rs
crates/restsend/src/websocket/: mod.rs  tests.rs  tokio_impl.rs  web_sys_impl.rs
crates/restsend/tests/: http_server.rs  mod.rs  test_media.rs  test_net.rs  test_websocket.rs
crates/restsend_dart/: .metadata  README.md  flutter_rust_bridge.yaml  pubspec.yaml
crates/restsend_dart/android/: build.gradle  settings.gradle
crates/restsend_dart/example/: README.md  pubspec.yaml
crates/restsend_dart/ios/: restsend_dart.podspec
crates/restsend_dart/rust/: Cargo.toml
crates/restsend_dart/rust/src/: frb_generated.rs  lib.rs
crates/restsend_dart/rust/src/client/: account.rs  callback.rs  client.rs  mod.rs
dart/restsend_dart/: README.md  analysis_options.yaml  iOS_BUILD.md  pubspec.yaml
docs/: rust-im-architecture-no-redis-mq-cn.md
js/: README.md  package.json  restsend_wasm.d.ts  restsend_wasm.js  restsend_wasm_bg.js  restsend_wasm_bg.wasm  restsend_wasm_bg.wasm.d.ts
migrations/: 00001_initial.sql
python/: restsend_ffi.py  restsend_sdk.py
python-demo/: demo.py
scripts/: xcframework.sh
src/: client.udl  error.rs  lib.rs  net.rs  request.rs
src/client/: connection.rs  media.rs  message.rs  mod.rs  services.rs
src/models/: chat_log.rs  config.rs  conversation.rs  topic.rs  topic_member.rs  user.rs
src/tests/: mod.rs  test_chat.rs  test_clients.rs  test_service.rs  test_websocket.rs
swift/: RestsendSdk.podspec  module.h  restsend.swift  restsend_sdk.swift  restsend_sdkFFI.h  restsend_sdkFFI.modulemap
(+79 files in other folders)
