[package]
name = "restsend-dart"
version = "0.1.1"
edition = "2021"
description = "Flutter bindings for the restsend SDK"
authors = ["Restsend Team <kui@fourz.cn>"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
restsend-sdk = { path = "../restsend" }
flutter_rust_bridge = "=2.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync"] }
thiserror = "1.0"
log = "0.4"
