[package]
name = "restsend-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
restsend-sdk = { path = "../restsend" }
uniffi = { version = "0.25.2", features = ["build", "cli"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "bindgen"
path = "bindgen.rs"
