[package]
name = "restsend-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
restsend-sdk = { path = "../restsend" }
uniffi = { version = "0.25.2", features = ["build", "cli"] }
uniffi_bindgen = "0.25.2"
clap = "4.4.11"
camino = "1.1.6"
tempdir = "0.3.7"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
openssl = { version = "0.10.61", features = ["vendored"] }

[[bin]]
name = "bindgen"
path = "bindgen.rs"

[profile.release]
opt-level = "z"
strip = "debuginfo"
lto = true
