[package]
name = "restsend-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
restsend-sdk = { path = "../restsend", features = ["mobile"] }
restsend-macros = { path = "../restsend-macros" }
uniffi = { version = "0.25.2", features = ["build", "cli"] }
uniffi_bindgen = "0.25.2"
uniffi_macros = "0.25.2"
clap = "4.4.11"
camino = "1.1.6"
tempdir = "0.3.7"

# [[bin]]
# name = "bindgen"
# path = "bindgen.rs"
