[package]
name = "restsend-wasm"
version = "1.1.6"
edition = "2021"
description = "A library for RestSEND client in WASM"
authors = ["RestSEND Team <kui@fourz.cn>"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["auth", "conversation", "topic", "message", "restsend-sdk/web"]
auth = []
conversation = []
topic = []
message = []
livechat = ["conversation", "message", "restsend-sdk/web"]
indexeddb = [
    "auth",
    "conversation",
    "topic",
    "message",
    "restsend-sdk/indexeddb",
]

[dependencies]
serde = "1.0.215"
restsend-sdk = { path = "../restsend" }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
serde-wasm-bindgen = "0.6.5"
futures-util = "0.3.31"
futures = "0.3.31"
js-sys = "0.3.76"
web-sys = "0.3.76"
chrono = "0.4.39"
log = "0.4.22"

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
