[package]
name = "restsend-wasm"
version = "1.2.4"
edition = "2021"
description = "Restsend  Instant Messaging Javascript/Wasm SDK"
authors = ["Restsend Team <kui@fourz.cn>"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["auth", "conversation", "topic", "message", "restsend-sdk/web"]
auth = []
conversation = []
topic = []
message = []
livechat = ["conversation", "message", "restsend-sdk/web"]
indexeddb = [
    "auth",
    "conversation",
    "topic",
    "message",
    "restsend-sdk/indexeddb",
]

[dependencies]
serde = "1.0.219"
restsend-sdk = { path = "../restsend" }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
futures-util = "0.3.31"
futures = "0.3.31"
js-sys = "0.3.77"
web-sys = "0.3.77"
chrono = "0.4.40"
log = "0.4.26"

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
