[package]
name = "restsend-sdk"
version = "1.0.3"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
web = []
mobile = []
desktop = []
indexeddb = ["web"]

[dependencies]
restsend-macros = { path = "../restsend-macros" }
uniffi = { version = "0.27.1", features = ["tokio", "build", "cli"] }
uniffi_bindgen = "0.27.1"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
tokio-util = "0.7.10"
lazy_static = "1.4.0"
include_dir = "0.7.3"
lru = "0.12.3"
serde_json = "1.0.116"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.21"
url = "2.5.0"
futures-channel = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink", "std"] }
http = "1.1.0"
base64 = "0.22.0"
thiserror = "1.0.58"
env_logger = "0.11.3"
chrono = "0.4.38"
md5 = "0.7.0"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = [
    "BinaryType",
    "Blob",
    "BlobPropertyBag",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "Location",
    "Window",
    "console",
    "Request",
    "RequestInit",
    "ReadableStream",
    "RequestMode",
    "Response",
    "Headers",
    "File",
    "FormData",
    "XmlHttpRequest",
    "XmlHttpRequestUpload",
    "DomException",
    "IdbCursorDirection",
    "IdbCursorWithValue",
    "IdbDatabase",
    "IdbFactory",
    "IdbIndex",
    "IdbIndexParameters",
    "IdbKeyRange",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
] }
async-trait = "0.1.80"
serde-wasm-bindgen = "0.6.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.37.0", features = ["time", "sync", "macros", "io-util"] }
reqwest = { version = "0.12.3", default-features = false, features = [
    "json",
    "multipart",
    "stream",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"
clap = "4.5.4"
camino = "1.1.6"
tempdir = "0.3.7"
openssl = { version = "0.10.64", features = ["vendored"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
tokio-websockets = { version = "0.8.0", features = [
    "native-tls",
    "client",
    "openssl",
    "rand",
] }
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.3", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "native-tls",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
hyper = { version = "1.3.0", features = ["full"] }
http-body-util = "0.1.1"
hyper-util = { version = "0.1.3", features = ["full"] }
tempfile = "3.10.1"
multer = "3.0.0"

[[bin]]
name = "bindgen"
path = "bindgen.rs"
